<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.balistikcalculater.MainActivity" >
    <item android:id="@+id/action_Generalsettings"
        android:title="@string/menu_generalSetting"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_Scopesettings"
        android:title="@string/menu_scopeSetting"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_Riflesettings"
        android:title="@string/menu_rifleSetting"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_Weathersettings"
        android:title="@string/menu_weatherSetting"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/Donate"
        android:title="@string/menu_donate"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/About"
        android:title="@string/menu_about"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>