<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bt_save"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="78dp"
        android:backgroundTint="@color/orangeCP"
        android:text="@string/sauvegarder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_distanceResultUnit" />

    <TextView
        android:id="@+id/lb_speedResultUnit"
        android:layout_width="400dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/speed_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggle_speedResultUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="ToggleButton"
        android:textOff="M/S"
        android:textOn="F/S"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_speedResultUnit" />

    <TextView
        android:id="@+id/lb_mesureResultUnit"
        android:layout_width="400dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/measure_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_speedResultUnit" />

    <ToggleButton
        android:id="@+id/toggle_mesureResultUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="ToggleButton"
        android:textOff="CM"
        android:textOn="INCH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_mesureResultUnit" />

    <TextView
        android:id="@+id/lb_distanceResultUnit"
        android:layout_width="400dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/distance_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_mesureResultUnit" />

    <ToggleButton
        android:id="@+id/toggle_distanceResultUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:textOff="M"
        android:textOn="YARDS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_distanceResultUnit" />

    <Button
        android:id="@+id/bt_quit"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/blackCP"
        android:text="@string/goToHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_save" />
</androidx.constraintlayout.widget.ConstraintLayout>